--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
   /*background: color image repeat position/size */
 
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -160,4 +161,14 @@ ul li a:hover {
 
 #social-links a:hover {
   background: var(--highlight-color);
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .ligth {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
