--- a/style.css
+++ b/style.css
@@ -25,15 +25,6 @@
 }
 
 body {
-  /*
-  background-image: url(./assets/bg-mobile.jpg);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
-  */
-
-  /*background: color image repeat position/size */
-
   background: var(--bg-url) no-repeat top center/cover;
   height: 100vh;
 }
@@ -50,7 +41,7 @@ body * {
   padding: 0 24px;
 }
 
-/* Profile */
+/* profile */
 #profile {
   text-align: center;
   padding: 24px;
@@ -66,7 +57,7 @@ body * {
   margin-top: 8px;
 }
 
-/*switch*/
+/* switch */
 #switch {
   position: relative;
   width: 64px;
@@ -86,10 +77,16 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s;
 }
 
 .light #switch button {
-  animation: slide-in 0.4s forwards;
+  animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -103,7 +100,7 @@ body * {
   border-radius: 9999px;
 }
 
-/*links*/
+/* links */
 ul {
   list-style: none;
 
@@ -137,14 +134,16 @@ ul li a {
 /* pseudo-selector */
 ul li a:hover {
   background: var(--surface-color-hover);
-  border: 1/5px solid var(--text-color);
+  border: 1.5px solid var(--text-color);
 }
 
 /* social links */
 #social-links {
   display: flex;
   justify-content: center;
+
   padding: 24px 0;
+
   font-size: 24px;
 }
 
@@ -162,22 +161,38 @@ ul li a:hover {
   background: var(--highlight-color);
 }
 
+footer {
+  padding: 24px 0;
+  text-align: center;
+  font-size: 14px;
+}
+
 /* media queries */
 @media (min-width: 700px) {
   :root {
     --bg-url: url(./assets/bg-desktop.jpg);
   }
-  .ligth {
+
+  .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
   }
 }
 
-/* add smmoth botton */
+/* animation */
 @keyframes slide-in {
   from {
     left: 0;
   }
   to {
     left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
